manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.32.0 (765fde254)
    traefik.enable: "true"
    traefik.http.routers.app.rule: Host(`localhost`)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.32.0 (765fde254)
        traefik.enable: "true"
        traefik.http.routers.app.rule: Host(`localhost`)
      labels:
        io.kompose.network/k8s-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: APP_DEBUG
              value: "true"
            - name: APP_ENV
              value: dev
            - name: APP_KEY
              value: base64:DJYTvaRkEZ/YcQsX3TMpB0iCjgme2rhlIOus9A1hnj4=
            - name: DB_CONNECTION
              value: mysql
            - name: DB_DATABASE
              value: app_database
            - name: DB_HOST
              value: db
            - name: DB_PASSWORD
              value: app_password
            - name: DB_PORT
              value: "3306"
            - name: DB_USERNAME
              value: app_user

          image: ghcr.io/k1000kn/sample-app:latest
          imagePullPolicy: IfNotPresent
          name: app
          command:
            - "sh"
            - "-c"
            - "php artisan migrate && php artisan db:seed && apache2-foreground"
          ports:
            - containerPort: 8081
              hostPort: 80
              protocol: TCP
      restartPolicy: Always
