manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/sample-app-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: db-secret
          image: mysql:5.7
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
              subPath: mysql
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
