manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.31.2 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.app.rule: Host(`localhost`)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 80
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
